<package>
  <name>saw_openigt_link</name>
  <version>1.1.1</version>
  <description>
  sawOpenIGTLink
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawOpenIGTLink</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <build_depend>saw_keyboard</build_depend>
  <build_depend>saw_text_to_speech</build_depend>
  <build_depend>saw_controllers</build_depend>
  <build_depend>saw_constraint_controller</build_depend>
  <build_depend>saw_robot_io_1394</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>

  <run_depend>saw_keyboard</run_depend>
  <run_depend>saw_controllers</run_depend>
  <run_depend>saw_constraint_controller</run_depend>
  <run_depend>saw_robot_io_1394</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
