<package>
  <name>saw_open_igt_link_examples</name>
  <version>1.1.1</version>
  <description>
  sawOpenIGTLink
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawOpenIGTLink</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>saw_open_igt_link</build_depend>


  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>saw_open_igt_link</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
